--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <title>Document</title>
     </head>
     <body style="background-color: black;">
-        <main>
-            <img style="margin-left: 30%; margin-top: 10%; height: 200px; " src="./cosmos.jpeg" alt="UFO lekste">
-            <div>
-                <h1 style="color: white; margin-left: 50%;">Oops!</h1>
-                <p style="color: white; margin-left: 50%; text-align: center; font-size: 70px;">404</p>
-                <p style="color: white; margin-left: 50%">Your page is currently under maintenance and will guide you back to the homepage after 10 seconds.</p>
-                <a style="color: white; margin-left: 50%; text-align: center;" href="">Back to home</a>
+        <main style="display: inline-block; width: 50%; margin-left: 25%; margin-top: 10%">
+            <div style="width: 50%;float: right; margin-top: 10%;">
+                <h1 style=" color: white;margin: 0;">Oops!</h1>
+                <p style=" color: white;margin: 0;font-size: 150px; text-align: center">404</p>
+                <p style=" color: white;margin: 0;">Your page is currently under maintenance and will guide you back to the homepage after 10 seconds.</p>
+                <a style=" color: white;margin: 0;font-family: Verdana, Geneva, Tahoma, sans-serif;padding: 10px; text-decoration: none;border: 2px solid;border-radius: 20px; margin-top: 30px;padding-left: 30px;padding-right: 30px; display: inline-block;" href="">Back to home</a>
             </div>
+            <img style=" margin-left: 10%; height: 300px; " src="./cosmos.png" alt="Kosmonautas">
         </main>
     </body>
 </html>
